<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OSMBugs</string>
    <string name="action_settings">Settings</string>
    <string name="center_on_gps">Center on GPS</string>
    <string name="refresh">Refresh</string>
    <string name="save">Save</string>
    <string name="comment">Comment</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="state">State</string>
    <string name="keepright">Keepright</string>
    <string name="visible_bugs">Visible Bugs</string>
    <string name="visible_warnings">Visible Warnings</string>
    <string name="ignored_errors">Ignore Errors</string>
    <string name="center_on_gps_enabled">Center on GPS Enabled</string>
    <string name="center_on_gps_disabled">Center on GPS Disabled</string>
    <string name="feedback">Feedback</string>
    <string name="ok">OK</string>
    <string name="feedback_transmitted">Feedback transmitted\nThank You</string>
    <string name="failed_to_transmit_feedback">Failed to transmit Feedback</string>
    <string name="saved_bug">Saved Bug</string>
    <string name="failed_to_save_bug">Failed to save Bug</string>
    <string name="non_closed_areas">Non-closed Areas</string>
    <string name="dead_ended_oneways">Dead-ended Oneways</string>
    <string name="almost_junction">Almost Junctions</string>
	<string name="missing_tags">Missing Tags</string>
    <string name="motorways_without_ref">Motorways without Ref</string>
	<string name="places_of_worship_without_religion">Places of Worship without Religion</string>
    <string name="point_of_interest_without_name">Point of Interest without Name</string>
	<string name="ways_without_nodes">Ways without Nodes</string>
    <string name="floating_islands">Floating Islands</string>
	<string name="railway_crossing_without_tag">Railway Crossing without Tag</string>
    <string name="wrongly_used_railway_crossing_tag">Wrongly used Railway Crossing Tag</string>
	<string name="fixme_tagged_items">FIXME Tagged Items</string>
    <string name="relations_without_type">Relations without Type</string>
	<string name="intersection_without_junction">Intersection without Junction</string>
    <string name="overlapping_ways">Overlapping Ways</string>
	<string name="loopings">Loopings</string>
    <string name="misspelled_tags">Misspelled Tags</string>
	<string name="layer_conflicts">Layer Conflicts</string>
    <string name="motorways_connected_directly">Motorways connected directly</string>
	<string name="boundaries">Boundaries</string>
    <string name="restrictions">Restrictions</string>
	<string name="roundabout">Roundabout</string>
	<string name="link_connections">*_link_connections</string>
	<string name="bridge_tags">Bridge Tags</string>
	<string name="doubled_places">Doubled Places</string>
	<string name="non_physical_use_of_sport_tag">Non-Physical use of Sport-Tag</string>
	<string name="geometry_glitches">Geometry Glitches</string>
	<string name="website">Website</string>
	<string name="multiple_nodes_on_the_same_spot">Multiple Nodes on the same Spot</string>
	<string name="deprecated_tags">Deprecated Tags</string>
	<string name="missing_maxspeed">Missing Maxspeed</string>
	<string name="language_unknown">Language Unknown</string>
	<string name="missing_tracktype">Missing Tracktype</string>
	<string name="show_temporary_ignored">Show Temporary Ignored</string>
	<string name="show_ignored">Show Ignored</string>
	<string name="openstreetbugs">Openstreetbugs</string>
	<string name="show_only_open_bugs">Show only open Bugs</string>
	<string name="bug_limit">Bug Limit</string>
	<string name="enter_new_limit">Enter new Limit</string>
	<string name="provider">Provider</string>
	<string name="enter_username">Enter Username</string>
	<string name="username">Username</string>
	<string name="platform">Platform</string>
	<string-array name="new_bug_platforms">
		<item >Openstreetmap Notes</item>
		<item >Openstreetbugs</item>
	</string-array>
	<string name="new_bugs_text">New Bugs Text</string>
	<string name="mapdust">Mapdust</string>
	<string name="wrong_turn">Wrong Turn</string>
	<string name="bad_routing">Bad Routing</string>
	<string name="oneway_road">Oneway Road</string>
	<string name="blocked_street">Blocked Street</string>
	<string name="missing_street">Missing Street</string>
	<string name="roundabout_issue">Roundabout Issue</string>
	<string name="missing_speed_info">Missing Speed Info</string>
	<string name="other">Other</string>
	<string name="show_open_bugs">Show Open Bugs</string>
	<string name="show_fixed_bugs">Show Closed Bugs</string>
	<string name="show_invalid_bugs">Show Invalid Bugs</string>
	<string name="bug_symbol">Bug Symbol</string>
	<string name="specific">Specific</string>
	<string name="general">General</string>
	<string name="about">About</string>
	<string name="dialog_about_text">OSMBugs V0.1 - Beta\nThis App uses Data from:\n\nThe Openstreetmap Project:\nhttp://www.openstreetmap.org\n\nKeepright:\nhttp://www.keepright.at\n\nOpenstreetbugs:\nhttp://openstreetbugs.schokokeks.org\n\nMapdust:\nhttp://www.mapdust.com\n\nAsher (Bug Icon):\nhttp://kyo-tux.deviantart.com</string>
	<string name="feedback_message_too_long">Feedback Message too long (3000 Characters)</string>
	<string name="openstreetmap_notes">Openstreetmap Notes</string>
	<string name="edit">Edit</string>
	<string name="comments">Comments</string>
	<string name="open">Open</string>
	<string name="closed">Closed</string>
	<string name="ignored">ignored</string>
</resources>